# ros2_lx16a_driver

./: CMakeLists.txt  LICENSE  README.md  package.xml  setup.cfg  setup.py
assets/: lx16a_spec.py
assets/cad/: BusLinker_V2.2.dae  Servo_back_bracket.dae  Servo_side_bracket.dae  Servo_side_bracket_symetric.dae  straight_u_bracket.dae
params/: lx16a_params.yaml
ros2_lx16a_driver/: lx16a_driver.py  lx16a_node.py
src/: lx16a_node.py
srv/: GetLX16AInfo.srv  SetLX16AParams.srv  SetLX16ATorque.srv  SetLX16ATorqueLed.srv  SetServoInfo.srv
test/: test_lx16a.py
