<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros2_lx16a_driver</name>
  <version>0.0.0</version>
  <description>Package ROS2 for controlling LewanSoul LX-16A servos</description>
  <maintainer email="95591405+robotcopper@users.noreply.github.com">florisjousselin</maintainer>
  <license>BSD3</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>serial</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
