<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros2_lx16a_driver</name>
  <version>0.0.0</version>
  <description>Package ROS2 for controlling LewanSoul LX-16A servos</description>
  <maintainer email="95591405+robotcopper@users.noreply.github.com">florisjousselin</maintainer>
  <license>BSD3</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <build_depend>rosidl_default_generators</build_depend>
  <build_depend>rclpy</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>rclpy</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>
</package>
